--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lib"
    ],
    "dependencies":{
+      "coffee-script":">= 1.4.0",
       "sprintf":"0.1.1",
       "ax":"git://github.com/automatthew/ax.git#0.1.7",
       "cookiejar":"1.3.x",
